--- a/templates/list.html
+++ b/templates/list.html
@@ -1,10 +1,17 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>List of questions</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-
-</body>
+    <body>
+        <ul>
+            <li><a href="">Main Menu</a></li>
+            <li><a href="add">Add question</a></li>
+            <li><a href="list">Questions</a></li>
+            <li id="about"><a href="about">About</a></li>
+        </ul>
+    </body>
 </html>
