--- a/templates/add.html
+++ b/templates/add.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <ul>
-            <li><a href="">Main Menu</a></li>
+            <li><a href="/">Main Menu</a></li>
             <li><a href="add">Add question</a></li>
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
