--- a/templates/list.html
+++ b/templates/list.html
@@ -8,10 +8,12 @@
 </head>
     <body>
         <ul>
-            <li><a href="">Main Menu</a></li>
+            <li><a href="/">Main Menu</a></li>
             <li><a href="add">Add question</a></li>
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
+
+
     </body>
 </html>
