--- a/templates/list.html
+++ b/templates/list.html
@@ -13,7 +13,20 @@
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
-
+    <div>
+        {% for question in questions  %}
+                <tr>
+                    <td>{{ loop.index }} </td>
+                    <td><a href="question_detail/{{ question['id'] }}">{{ question['title'] }} </a></td>
+                    <td>{{ question['message'] }} </td>
+                    <td>{{ question['submission_time'] }} </td>
+                    <td>{{ question['view_number'] }} </td>
+                    <td>{{ question['vote_number'] }} </td>
+                    {% endif %}
+                    <td><a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash text-danger"></i></a></td>
+                </tr>
+                {% endfor %}
+    </div>
 
     </body>
 </html>
