--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add question</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-
-</body>
+    <body>
+        <ul>
+            <li><a href="/">Main Menu</a></li>
+            <li><a href="add">Add question</a></li>
+            <li><a href="list">Questions</a></li>
+            <li id="about"><a href="about">About</a></li>
+        </ul>
+    </body>
 </html>
