--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -8,8 +8,8 @@
     <body>
         <ul>
             <li><a href="/">Main Menu</a></li>
-            <li><a href="add">Add question</a></li>
-            <li><a href="list">Questions</a></li>
+            <li><a href="/add">Add question</a></li>
+            <li><a href="/list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
     </body>
