--- a/templates/add.html
+++ b/templates/add.html
@@ -9,17 +9,17 @@
     <body>
         <ul>
             <li><a href="/">Main Menu</a></li>
-            <li><a href="add">Add question</a></li>
+            <li><a href="add-question">Add question</a></li>
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
-        <form action="/" method="POST">
+        <form action="/add" method="POST">
              <fieldset>
                     <legend>Enter Your Question:</legend>
                         Nickname:<br>
-                    <input type="text" name="nickname" value="Mickey"><br>
+                 <input name="title" type="text" value="Mickey"><br>
                         Question:<br>
-                    <textarea name="question";>Enter your Question here</textarea><br>
+                 <textarea ;name="message">Enter your Question here</textarea><br>
                     <br>
                     <button type="submit" formmethod="post"><span>Submit</span></button>
               </fieldset>
