--- a/templates/add.html
+++ b/templates/add.html
@@ -19,7 +19,7 @@
                         Nickname:<br>
                  <input name="title" type="text" value="Mickey"><br>
                         Question:<br>
-                 <textarea ;name="message">Enter your Question here</textarea><br>
+                 <textarea :name="message">Enter your Question here</textarea><br>
                     <br>
                     <button type="submit" formmethod="post"><span>Submit</span></button>
               </fieldset>
