--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -12,5 +12,18 @@
             <li><a href="/list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
+        <table>
+            <td>{{ question['title'] }} </td>
+            <td>{{ question['message'] }} </td>
+            <td>{{ question['submission_time'] }} </td>
+            <td>{{ question['view_number'] }} </td>
+            <td>{{ question['vote_number'] }} </td>
+            {% if question['image'] %}
+            <td><img src="/static/{{ question['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
+            {% else %}
+                <td><img src="http://placehold.it/80" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
+            {% endif %}
+            <td><a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash text-danger"></i></a></td>
+        </table>
     </body>
 </html>
