fix add question bug's -add.html -server.py
Signed-off-by: michalkandybowicz <eejdzent@gmail.com>

--- a/templates/add.html
+++ b/templates/add.html
@@ -16,10 +16,10 @@
         <form action="/add" method="POST">
              <fieldset>
                     <legend>Enter Your Question:</legend>
-                        Nickname:<br>
-                 <input name="title" type="text" value="Mickey"><br>
+                 Title:<br>
+                 <input name='title' type="text" value="Your title"><br>
                         Question:<br>
-                 <textarea :name="message">Enter your Question here</textarea><br>
+                 <textarea name="message">Enter your Question here</textarea><br>
                     <br>
                     <button type="submit" formmethod="post"><span>Submit</span></button>
               </fieldset>
