--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: bisque;
+    background-color: #D6EAF8;
 }
 
 ul {
@@ -23,7 +23,7 @@ li a {
 }
 
 li a:hover {
-    background-color: #BADA55;
+    background-color: ghostwhite;
     color: black;
 }
 
@@ -63,9 +63,9 @@ input{
 button {
     display: inline-block;
     border-radius: 4px;
-    background-color: #BADA55;
+    background-color: indigo;
     border: none;
-    color: black;
+    color: white;
     text-align: center;
     font-size: 25px;
     padding: 20px;
