--- a/templates/answer.html
+++ b/templates/answer.html
@@ -22,7 +22,7 @@
                 <label for="answer">Answer description</label>
                 <textarea type="description" name="answer" class="form-control" id="answer" placeholder="Enter your answer here" rows="8"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            <button type="submit" class="btn btn-primary mb-2"><span>Submit</span></button>
         </form>
     </div>
 
