--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -26,7 +26,7 @@
             <td><a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash text-danger"></i></a></td>
         </table>
         </br>
-        <a href="/question/{{ question['id'] }}/new-answer" <button>Add Answer</button></a>
+        <a href="/question/{{ question['id'] }}/new-answer"><button><span>Add Answer</span></button></a>
          </br>
         <table>
         {% for answer in answers  %}
