--- a/templates/add.html
+++ b/templates/add.html
@@ -9,7 +9,7 @@
     <body>
         <ul>
             <li><a href="/">Main Menu</a></li>
-            <li><a href="add-question">Add question</a></li>
+            <li><a href="add">Add question</a></li>
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
