--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,6 @@
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
+        <img src="static/logo.png" width="8%" height="8%" align="left" >
     </body>
 </html>
