--- a/templates/list.html
+++ b/templates/list.html
@@ -31,6 +31,14 @@
                         <td>{{ question['submission_time'] }} </td>
                         <td>{{ question['view_number'] }} </td>
                         <td>{{ question['vote_number'] }} </td>
+                        <td>
+                            <a href="list/{{ question['id'] }}/up"><img border="0" src="static/up.png" width="50"
+                                                                        height="50"></a>
+                        </td>
+                        <td>
+                            <a href="list/{{ question['id'] }}/down"><img border="0" src="static/down.png" width="50"
+                                                                          height="50"></a>
+                        </td>
                         {% if question['image'] %}
                         <td><img src="/static/{{ question['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
                     {% else %}
