--- a/templates/list.html
+++ b/templates/list.html
@@ -30,7 +30,13 @@
                         <td>{{ question['message'] }} </td>
                         <td>{{ question['submission_time'] }} </td>
                         <td>{{ question['view_number'] }} </td>
-                        <td>{{ question['vote_number'] }} </td>
+
+                        {% if question['vote_number']|int < 0 %}
+                            <td class="red" >{{ question['vote_number'] }} </td>
+                        {% else %}
+                            <td class="green" >{{ question['vote_number'] }} </td>
+                        {% endif %}
+
                         <td>
                             <a href="list/{{ question['id'] }}/up"><img border="0" src="static/up.png" width="50"
                                                                         height="50"></a>
