naprawione bledy usuwanie pytan kolorowanie voetow itd dziala

--- a/templates/list.html
+++ b/templates/list.html
@@ -50,7 +50,7 @@
                     {% else %}
                         <td><img src="http://placehold.it/80" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
                     {% endif %}
-                    <td><a href="/question/{{ question['id'] }}/delete"><i <button type="submit" formmethod="post"><span>DELETE</span></button>
+                        <td><a href="/question/{{ question['id'] }}/delete"><button type="submit" formmethod="post"><span>DELETE</span></button></a>
                     </tr>
 
         {% endfor %}
