--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -34,9 +34,15 @@
             <td>{{ loop.index }} </td>
             <td>{{ answer['message'] }} </td>
             <td>{{ answer['submission_time'] }} </td>
-            <td>{{ answer['vote_number'] }} </td>
-            <td><a href="/answer/{{ answer['id'] }}/vote-down/{{ question['id'] }}"> <img border="0" src="/static/up.png" width="50" height="50"></a></td>
-            <td><a href="/answer/{{ answer['id'] }}/vote-up/{{ question['id'] }}"> <img src="/static/down.png" width="50" height="50"></a></td>
+            {% if answer['vote_number']|int < 0 %}
+                <td class="red" >{{ answer['vote_number'] }} </td>
+            {% elif answer['vote_number']|int == 0 %}
+                <td class="yellow" >{{ answer['vote_number'] }} </td>
+            {% else %}
+                <td class="green" >{{ answer['vote_number'] }} </td>
+            {% endif %}
+            <td><a href="/answer/{{ answer['id'] }}/vote-up/{{ question['id'] }}"> <img border="0" src="/static/up.png" width="50" height="50"></a></td>
+            <td><a href="/answer/{{ answer['id'] }}/vote-down/{{ question['id'] }}"> <img src="/static/down.png" width="50" height="50"></a></td>
             </tr>
             {% if answer['image'] %}
                         <td><img src="/static/{{ answer['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
