--- a/static/style.css
+++ b/static/style.css
@@ -32,12 +32,12 @@ fieldset{
     margin-top: 3%;
     font-size: large;
     width: 70%;
-    height: 800px;
+    height: 900px;
+    padding-left: 5%;
 }
 
 textarea{
     resize: none;
-    margin-left: 5%;
     width: 90%;
     height: 87%;
     border: 2px solid black;
