--- a/static/style.css
+++ b/static/style.css
@@ -1,34 +1,49 @@
 body {
-    background-color: #D6EAF8;
+    background-color: #2E3037FF;
+    color: ghostwhite;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+a:link{
+    color: ghostwhite;
+    font-size: x-large;
     text-decoration: none;
 }
 
+a:visited {
+  color: powderblue;
+    font-size: x-large;
+    text-decoration: none;
+
+}
+
+ul {
+    float: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #39C0BA;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
 li a:hover {
     background-color: ghostwhite;
     color: black;
 }
 
+li a:visited{
+    color: #000;
+}
+
 fieldset{
-    margin-left: 15%;
+    margin-left: 10%;
     margin-top: 3%;
     font-size: large;
     width: 70%;
@@ -60,9 +75,9 @@ input{
 button {
     display: inline-block;
     border-radius: 4px;
-    background-color: indigo;
+    background-color: #39C0BA;
     border: none;
-    color: white;
+    color: black;
     text-align: center;
     font-size: 25px;
     padding: 18px;
@@ -96,7 +111,7 @@ button:hover span:after {
 }
 
 #delete{
-    background-color: orangered;
+    background-color: orange;
     transition: none;
 }
 
@@ -123,3 +138,43 @@ td.green {
 td.yellow{
     color: yellow;
 }
+
+
+#trans {
+  position:relative;
+  height:281px;
+  width:450px;
+}
+
+#trans img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+  @keyframes transFadeInOut {
+  0% {
+  opacity:1;
+}
+45% {
+opacity:1;
+}
+55% {
+opacity:0;
+}
+100% {
+opacity:0;
+}
+}
+
+#trans img.top {
+animation-name: transFadeInOut;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+animation-duration: 5s;
+animation-direction: alternate;
+}
+
