--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
-        <img src="static/logo.png" width="8%" height="8%" align="left" >
+            <div id="trans" align="center">
+            <img width="1000px" height="541px" class="bottom" src="static/calsberg.jpg" />
+            <img class="top" src="static/cocacola.jpg" />
+            </div>
     </body>
 </html>
