--- a/templates/list.html
+++ b/templates/list.html
@@ -28,7 +28,7 @@
         {% for question in questions  %}
                     <tr>
                         <td>{{ loop.index }} </td>
-                        <td><a href="show_question/{{ question['id'] }}">{{ question['title'] }} </a></td>
+                        <td><a class="list" href="show_question/{{ question['id'] }}">{{ question['title'] }} </a></td>
                         <td>{{ question['message'] }} </td>
                         <td>{{ question['submission_time'] }} </td>
                         <td>{{ question['view_number'] }} </td>
