--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,19 @@
             <li><a href="list">Questions</a></li>
             <li id="about"><a href="about">About</a></li>
         </ul>
-            <div id="trans" align="center">
+            <div id="trans">
             <img width="1000px" height="541px" class="bottom" src="static/calsberg.jpg" />
             <img class="top" src="static/cocacola.jpg" />
+            </div>s
+
+            <div id="trans" class="right">
+            <img width="400px" height="600px" class="bottom" src="static/applepay.jpg" />
+            <img width="400px" height="600px" class="top" src="static/artemis.jpg" />
+            </div>
+
+            <div id="trans" class="low">
+            <img width="700px" height="401px" class="bottom" src="static/spacex.png" />
+            <img width="700px" height="401px" class="top" src="static/atlas.jpg" />
             </div>
     </body>
 </html>
