--- a/static/style.css
+++ b/static/style.css
@@ -5,34 +5,39 @@ body {
 
 a:link{
     color: ghostwhite;
-    font-size: x-large;
     text-decoration: none;
 }
 
 a:visited {
   color: powderblue;
-    font-size: x-large;
     text-decoration: none;
 
 }
 
 ul {
-    float: right;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #39C0BA;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #39C0BA;
+    font-size: medium;
+}
+
+li {
+    float: left;
+    font-size: medium;
 }
 
 li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: medium;
 }
 
-/* Change the link color on hover */
+
 li a:hover {
     background-color: ghostwhite;
     color: black;
@@ -42,19 +47,20 @@ li a:visited{
     color: #000;
 }
 
+
 fieldset{
     margin-left: 10%;
     margin-top: 3%;
     font-size: large;
-    width: 70%;
-    height: 900px;
+    width: 55%;
+    height: 700px;
     padding-left: 5%;
 }
 
 textarea{
     resize: none;
     width: 90%;
-    height: 80%;
+    height: 70%;
     border: 2px solid black;
     background-color: mintcream;
     border-radius: 4px;
@@ -178,3 +184,16 @@ animation-duration: 5s;
 animation-direction: alternate;
 }
 
+div.right{
+    float: right;
+}
+
+div.low{
+    margin-top: 15%;
+    float: bottom;
+}
+
+#border{
+    border: 1px solid white;
+    font-size: larger;
+}
