css i troche clean codu

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_v2.css') }}">
 </head>
     <body>
+
+    <div class="top">
+        <div class="inside">
+
+        </div>
+    </div>
+
+    <div class="left">
+        <div class="inside">
+
+        </div>
+    </div>
+    <div class="right">
+        <div class="inside">
+
+        </div>
+    </div>
+
+    <div class="bottom">
+        <div class="inside">
+
+        </div>
+    </div>
+
         <ul>
             <li><a href="/">Main Menu</a></li>
             <li><a href="add">Add question</a></li>
