--- a/templates/about.html
+++ b/templates/about.html
@@ -14,13 +14,23 @@
         </ul>
 
             <div id="trans" class="right">
-            <img width="400px" height="600px" class="bottom" src="static/applepay.jpg" />
-            <img width="400px" height="600px" class="top" src="static/artemis.jpg" />
+                <img width="400px" height="600px" class="bottom" src="static/applepay.jpg" />
+                <img width="400px" height="600px" class="top" src="static/artemis.jpg" />
             </div>
 
              <div id="trans" class="middle">
-            <img width="350px" height="251px" class="bottom" src="static/tesla.jpg" />
-            <img width="350px" height="251px" class="top" src="static/mcdonald.jpg" />
+                <img width="350px" height="251px" class="bottom" src="static/tesla.jpg" />
+                <img width="350px" height="251px" class="top" src="static/mcdonald.jpg" />
+            </div>
+
+            <div id="trans" class="right">
+                <img width="700px" height="401px" class="bottom" src="static/calsberg.jpg" />
+                <img  width="700px" height="401px" class="top" src="static/cocacola.jpg" />
+            </div>
+
+            <div id="trans" class="low">
+                <img width="700px" height="401px" class="bottom" src="static/spacex.png" />
+                <img width="700px" height="401px" class="top" src="static/atlas.jpg" />
             </div>
     </body>
 </html>
