--- a/static/style_v2.css
+++ b/static/style_v2.css
@@ -1,29 +1,30 @@
 html, body{
     height: 100%;
+    background-color: #404040;
 }
 
 div {
-  box-shadow: 10px 10px 5px grey;
+  box-shadow: 10px 10px 5px deeppink;
 }
 
 div.left{
     display: block;
     float: left;
-    background-color: powderblue;
-    padding: 3%;
-    width: 18%;
-    height: 25%;
-    margin-left: 15%;
+    background-color: darkorange;
+    padding: 1%;
+    width: 20%;
+    height: 35%;
+    margin-left: 17%;
     margin-top: 3%;
 }
 
 div.right{
     display: block;
     float: left;
-    background-color: powderblue;
-    padding: 3%;
-    width: 33%;
-    height: 25%;
+    background-color: darkorange;
+    padding: 1%;
+    width: 35%;
+    height: 35%;
     margin-left: 3%;
     margin-top: 3%;
 
@@ -32,22 +33,48 @@ div.right{
 div.top{
     display: block;
     float: left;
-    background-color: powderblue;
-    padding: 3%;
+    background-color: darkorange;
+    padding: 1%;
     width: 60%;
-    height: 10%;
-    margin-left: 15%;
+    height: 6%;
+    margin-left: 17%;
     margin-top: 5%;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: grey;
+    width: 100%;
+    height: 100%;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: lightskyblue;
 }
 
 div.bottom{
     display: block;
     float: left;
-    background-color: powderblue;
-    padding: 3%;
+    background-color: darkorange;
+    padding: 1%;
     width: 60%;
-    height: 5%;
-    margin-left: 15%;
+    height: 7%;
+    margin-left: 17%;
     margin-top: 3%;
 }
 
