--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -18,18 +18,25 @@
             <td>{{ question['submission_time'] }} </td>
             <td>{{ question['view_number'] }} </td>
             <td>{{ question['vote_number'] }} </td>
-            {% if question['image'] %}
-            <td><img src="/static/{{ question['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
-            {% else %}
-                <td><img src="http://placehold.it/80" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
-            {% endif %}
-            <td><a href="/question/{{ question['id'] }}/delete"><i class="fas fa-trash text-danger"></i></a></td>
+            <td>{% if question['image'] %}
+               <img src="{{ question['image'] }}" alt="User image" class="img-thumbnail" style="width: 150px">
+           {% else %}
+               <img src="http://placehold.it/80" alt="Example image" class="img-thumbnail" style="width: 150px">
+           {% endif %}
+            <form method=POST enctype=multipart/form-data action='/upload?question_id={{ question["id"] }}'>
+                <label class="btn btn-primary btn-sm">
+                    Browse <input type="file" style="display: none;" name="photo">
+                </label>
+                <button class="btn btn-primary btn-sm" type="submit">Upload</button></form></td>
+
+
 
         </table>
+
         </br>
         <a href="/question/{{ question['id'] }}/new-answer"><button><span>Answer</span></button></a>
         <a href="/show_question/{{ question['id'] }}/edit"><button><span>(R)Eddit</span></button></a>
-         </br>
+        </br>
         <table id="answers">
         {% for answer in answers  %}
             <tr>
@@ -46,14 +53,15 @@
             {% endif %}
             <td><a href="/answer/{{ answer['id'] }}/vote-up/{{ question['id'] }}"> <img border="0" src="/static/up.png" width="50" height="50"></a></td>
             <td><a href="/answer/{{ answer['id'] }}/vote-down/{{ question['id'] }}"> <img src="/static/down.png" width="50" height="50"></a></td>
-            </tr>
             {% if answer['image'] %}
-                        <td><img src="/static/{{ answer['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
+                        <td><img src="{{ answer['image'] }}" alt="Example image" class="img-thumbnail" style="height:70px; width:auto;"></td>
                     {% else %}
                         <td><img src="http://placehold.it/80" alt="Example image" class="button" style="height:70px; width:auto;"></td>
                     {% endif %}
             <td><a href="/answer/{{ answer['id'] + '_' + question['id'] }}/delete"><button id="delete" type="submit" formmethod="post"><span>DELETE</span></button></a>
-            {% endfor %}
+            {% endfor %}</td>
+            </tr>
+
 
         </table>
 
