Zrobiony CCS sztos

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,12 @@
 
     <div class="left">
         <div class="inside">
-
+            Hottest Question
         </div>
     </div>
     <div class="right">
         <div class="inside">
-
+            Newest Question
         </div>
     </div>
 
