--- a/static/style_v2.css
+++ b/static/style_v2.css
@@ -7,6 +7,26 @@ div {
   box-shadow: 10px 10px 5px deeppink;
 }
 
+div.big_center{
+    display: block;
+    float: left;
+    background-color: darkorange;
+    padding: 1%;
+    width: 70%;
+    margin-left: 12%;
+    margin-top: 3%;
+}
+
+div.second_center{
+    display: block;
+    float: left;
+    background-color: darkorange;
+    padding: 1%;
+    width: 70%;
+    margin-left: 12%;
+    margin-top: 3%;
+}
+
 div.left{
     display: block;
     float: left;
@@ -35,9 +55,9 @@ div.top{
     float: left;
     background-color: darkorange;
     padding: 1%;
-    width: 60%;
+    width: 70%;
     height: 6%;
-    margin-left: 17%;
+    margin-left: 12%;
     margin-top: 5%;
 }
 
@@ -49,6 +69,7 @@ ul {
     background-color: grey;
     width: 100%;
     height: 100%;
+    font-size: larger;
 }
 
 li {
@@ -83,4 +104,16 @@ div.inside{
     width: 100%;
     height: 100%;
     box-shadow: none;
+}
+
+fieldset{
+    height: 400px;
+}
+
+textarea{
+    resize: none;
+    width: 100%;
+    height: 70%;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
