--- a/templates/about.html
+++ b/templates/about.html
@@ -3,34 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_v2.css') }}">
 </head>
     <body>
-        <ul>
-            <li><a href="/">Main Menu</a></li>
-            <li><a href="add">Add question</a></li>
-            <li><a href="list">Questions</a></li>
-            <li id="about"><a href="about">About</a></li>
-        </ul>
-
-            <div id="trans" class="right">
-                <img width="400px" height="600px" class="bottom" src="static/applepay.jpg" />
-                <img width="400px" height="600px" class="top" src="static/artemis.jpg" />
+        <div class="top">
+            <div class="inside">
+                <ul>
+                    <li><a href="/">Main Menu</a></li>
+                    <li><a href="add">Add question</a></li>
+                    <li><a href="list">Questions</a></li>
+                    <li id="about"><a href="about">About</a></li>
+                </ul>
             </div>
-
-             <div id="trans" class="middle">
-                <img width="350px" height="251px" class="bottom" src="static/tesla.jpg" />
-                <img width="350px" height="251px" class="top" src="static/mcdonald.jpg" />
+        </div>
+        <div class="big_center">
+            <div class="inside">
+                ----> YOUR AD HERE <---
             </div>
-
-            <div id="trans" class="right">
-                <img width="700px" height="401px" class="bottom" src="static/calsberg.jpg" />
-                <img  width="700px" height="401px" class="top" src="static/cocacola.jpg" />
-            </div>
-
-            <div id="trans" class="low">
-                <img width="700px" height="401px" class="bottom" src="static/spacex.png" />
-                <img width="700px" height="401px" class="top" src="static/atlas.jpg" />
-            </div>
+        </div>
     </body>
 </html>
