--- a/templates/add.html
+++ b/templates/add.html
@@ -7,31 +7,37 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
     <body>
-        <ul>
-            <li><a href="/">Main Menu</a></li>
-            <li><a href="add">Add question</a></li>
-            <li><a href="list">Questions</a></li>
-            <li id="about"><a href="about">About</a></li>
-        </ul>
-        <form action="/add" method="POST">
-             <fieldset>
-                    <legend>Enter Your Question:</legend>
-                 Title:<br>
-                 <input name='title' type="text" value="Your title"><br>
-                        Question:<br>
-                 <textarea name="message">Enter your Question here</textarea><br>
+        <div class="top">
+            <div class="inside">
+                <ul>
+                    <li><a href="/">Main Menu</a></li>
+                    <li><a href="add">Add question</a></li>
+                    <li><a href="list">Questions</a></li>
+                    <li id="about"><a href="about">About</a></li>
+                </ul>
+            </div>
+        </div>
 
-                 <br>
-                 <form formmethod=POST enctype=multipart/form-data action='/add'>
-                 <td><label class="btn btn-primary btn-sm">
-                    Browse <input type="file" style="display: none;" name="photo">
-                </label>
-                 <button type="submit" formmethod="POST"><span>Submit</span></button></form></td>
-
-             </fieldset>
-
-
-
-        </form>
+        <div class="big_center">
+            <div class="inside">
+                <form action="/add" method="POST">
+                     <fieldset>
+                            <legend>Enter Your Question:</legend>
+                         Title:<br>
+                         <input name='title' type="text" value="Your title"><br>
+                                Question:<br>
+                         <textarea name="message">Enter your Question here</textarea><br>
+                            <br>
+                             <form formmethod=POST enctype=multipart/form-data action='/add'>
+                             <td><label class="btn btn-primary btn-sm">
+                                Browse <input type="file" style="display: none;" name="photo">
+                            </label>
+                             </td>
+                             </form>
+                            <button type="submit" formmethod="post"><span>Submit</span></button>
+                     </fieldset>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
