--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,26 +1,31 @@
-{% block contents %}
-   <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List of questions</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <title>New Answer</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_v2.css') }}">
 </head>
     <body>
-        <ul>
-            <li><a href="/">Main Menu</a></li>
-            <li><a href="add">Add question</a></li>
-            <li><a href="list">Questions</a></li>
-            <li id="about"><a href="about">About</a></li>
-        </ul>
-
-        <form action="/question/{{ id }}/new-answer" method="post">
-            <fieldset>
-                <legend>Enter Your Answer HERE!!!!</legend>
-                <textarea type="description" name="answer" placeholder="Enter your answer here" rows="8"></textarea>
-            <button type="submit"><span>Submit</span></button>
-            </fieldset>
-        </form>
+        <div class="top">
+            <div class="inside">
+                <ul>
+                    <li><a href="/">Main Menu</a></li>
+                    <li><a href="/add">Add question</a></li>
+                    <li><a href="/list">Questions</a></li>
+                    <li id="about"><a href="/about">About</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="big_center">
+            <div class="inside">
+                <form action="/question/{{ id }}/new-answer" method="post">
+                    <fieldset>
+                        <legend>Enter Your Answer</legend>
+                        <textarea type="description" name="answer" placeholder="Enter your answer here" rows="8"></textarea>
+                    <button type="submit"><span>Submit</span></button>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
     </body>
-
-{% endblock %}
+</html>
