--- a/templates/add.html
+++ b/templates/add.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add question</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_v2.css') }}">
 </head>
     <body>
         <div class="top">
@@ -17,7 +17,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="big_center">
             <div class="inside">
                 <form action="/add" method="POST">
@@ -30,7 +29,7 @@
                             <br>
                              <form formmethod=POST enctype=multipart/form-data action='/add'>
                              <td><label class="btn btn-primary btn-sm">
-                                Browse <input type="file" style="display: none;" name="photo">
+                                Browse  <input type="file" style="display: none;" name="photo">
                             </label>
                              </td>
                              </form>
