--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,14 @@
     </div>
     <div class="right">
         <div class="inside">
-            Newest Question
+            Newest Question:
+            <table class="new_question">
+                <td>{{ new['title'] }} </td>
+                <td>{{ new['message'] }} </td>
+                <td>{{ new['submission_time'] }} </td>
+                <td>{{ new['view_number'] }} </td>
+                <td>{{ new['vote_number'] }} </td>
+            </table>
         </div>
     </div>
 
