--- a/templates/show_question.html
+++ b/templates/show_question.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add question</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style_v2.css') }}">
 </head>
     <body>
         <div class="top">
